Downgrade to Java 8 + Autoformat